--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="action_settings">Settings</string>
     <string name="custom_bottom_bar">Custom Bottom Bar</string>
     <string name="submenu">SubMenu</string>
+    <string name="top_bar">Top Bar</string>
 </resources>
