middle bar behavior - more - more - more

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="custom_bottom_bar">Custom Bottom Bar</string>
     <string name="submenu">SubMenu</string>
     <string name="top_bar">Top Bar</string>
+    <string name="iceland">Iceland</string>
 </resources>
